added more games on carousel

--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -651,8 +651,8 @@
 
 					<!-- legal notice and copyright claim -->
 					<div class="space-x-2">
-						<a href="/legal-notice/" class="underline text-left inline md:pb-0">Legal Notice</a>
-						<a href="mailto:ke@playcover.app" class="underline">Copyright Claims</a>
+						<a href="/legal-notice/" class="hover:text-yellow-500 underline text-left inline md:pb-0">Legal Notice</a>
+						<a href="mailto:ke@playcover.app" class="underline hover:text-yellow-500">Copyright Claims</a>
 					</div>
 				</div>
 
