--- a/public/index.html
+++ b/public/index.html
@@ -258,6 +258,22 @@
 								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/honkai-impact-3-cover.jpeg" alt="honkai impact 3 logo image" />
 							</div>
 						</li>
+
+						<!-- arknights global -->
+						<li class="splide__slide px-2 md:px-2" style="width: 10px">
+							<div class="group relative">
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/arknights-global-gameplay.jpeg" alt="arknights global gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/arknights-global-logo.png" alt="arknights global logo image" />
+							</div>
+						</li>
+
+						<!-- mu archangel -->
+						<li class="splide__slide px-2 md:px-2" style="width: 10px">
+							<div class="group relative">
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/mu-archangel-gameplay.jpeg" alt="mu archangel gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/mu-archangel-logo.jpeg" alt="mu archangel logo image" />
+							</div>
+						</li>
 					</ul>
 				</div>
 
@@ -357,8 +373,8 @@
 
 					<!-- legal notice and copyright claim -->
 					<div class="space-x-2">
-						<a href="/legal-notice/" class="underline text-left inline md:pb-0">Legal Notice</a>
-						<a href="mailto:ke@playcover.app" class="underline">Copyright Claims</a>
+						<a href="/legal-notice/" class="hover:text-yellow-500 underline text-left inline md:pb-0">Legal Notice</a>
+						<a href="mailto:ke@playcover.app" class="underline hover:text-yellow-500">Copyright Claims</a>
 					</div>
 				</div>
 
