--- a/public/index.html
+++ b/public/index.html
@@ -441,8 +441,7 @@
 				// padding: { right: 300 },
 				autoplay: true,
 				interval: 3200,
-				swipeDistanceThreshold: 250,
-				flickVelocityThreshold: 0.1,
+				rewind: true,
 				breakpoints: {
 					800: {
 						perPage: 1,
