added gradient border around screenshot on homepage

--- a/public/legal-notice/index.html
+++ b/public/legal-notice/index.html
@@ -260,7 +260,7 @@
 		</section>
 
 		<!-- footer -->
-		<footer class="bg-white dark:bg-[#141414] text-gray-500 dark:text-gray-400 transition duration-200 ease-in-out">
+		<footer class="bg-white dark:bg-[#141414] text-gray-400 dark:text-gray-500 transition duration-200 ease-in-out">
 			<!-- above line -->
 			<section class="flex md:items-end justify-between max-w-screen mx-auto pt-8 pl-[6%] md:pl-[5.1%] pr-16 md:pr-[5%] flex-col-reverse md:flex-row">
 				<!-- text -->
@@ -269,9 +269,9 @@
 					<h1 class="font-medium text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">A PlayCover Team Product</h1>
 
 					<!-- legal notice and copyright claim -->
-					<div class="space-x-2">
-						<a href="/legal-notice/" class="hover:text-yellow-500 underline text-left inline md:pb-0">Legal Notice</a>
-						<a href="mailto:ke@playcover.app" class="underline hover:text-yellow-500">Copyright Claims</a>
+					<div class="md:divide-x divide-gray-300 dark:divide-gray-600 flex items-center">
+						<a href="/legal-notice/" class="pr-3 hover:text-yellow-500 underline text-left inline">Legal Notice</a>
+						<a href="mailto:ke@playcover.app" class="pl-3 underline hover:text-yellow-500">Copyright Claims</a>
 					</div>
 				</div>
 
