--- a/public/index.html
+++ b/public/index.html
@@ -212,10 +212,13 @@
 
 				<!-- hero image -->
 				<div id="hero-image">
-					<div class="relative">
-						<img class="dark:hidden z-10 max-w-xs md:max-w-[27rem] rounded-lg shadow md:hover:shadow-xl transition ease-out duration-700 transform md:hover:scale-105" src="assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
+					<div class="group relative">
+						<!-- bg gradient -->
+						<div class="rounded-lg absolute -inset-0.5 bg-gradient-to-r from-red-500 to-yellow-500 blur opacity-30 dark:opacity-40 group-hover:opacity-50 dark:group-hover:opacity-70 transform md:group-hover:scale-105 transition ease-out duration-1000 group-hover:duration-700"></div>
 
-						<img class="hidden z-10 dark:block max-w-xs md:max-w-[27rem] rounded-lg shadow md:hover:shadow-xl transition ease-out duration-700 transform md:hover:scale-105" src="assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
+						<img class="dark:hidden max-w-xs md:max-w-[27rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
+
+						<img class="hidden dark:block max-w-xs md:max-w-[27rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
 					</div>
 				</div>
 			</section>
@@ -363,7 +366,7 @@
 		</section>
 
 		<!-- footer -->
-		<footer class="bg-white dark:bg-[#141414] text-gray-500 dark:text-gray-400 transition duration-200 ease-in-out">
+		<footer class="bg-white dark:bg-[#141414] text-gray-400 dark:text-gray-500 transition duration-200 ease-in-out">
 			<!-- above line -->
 			<section class="flex md:items-end justify-between max-w-screen mx-auto pt-8 pl-[6%] md:pl-[5.1%] pr-16 md:pr-[5%] flex-col-reverse md:flex-row">
 				<!-- text -->
@@ -372,9 +375,9 @@
 					<h1 class="font-medium text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">A PlayCover Team Product</h1>
 
 					<!-- legal notice and copyright claim -->
-					<div class="space-x-2">
-						<a href="/legal-notice/" class="hover:text-yellow-500 underline text-left inline md:pb-0">Legal Notice</a>
-						<a href="mailto:ke@playcover.app" class="underline hover:text-yellow-500">Copyright Claims</a>
+					<div class="md:divide-x divide-gray-300 dark:divide-gray-600 flex items-center">
+						<a href="/legal-notice/" class="pr-3 hover:text-yellow-500 underline text-left inline">Legal Notice</a>
+						<a href="mailto:ke@playcover.app" class="pl-3 underline hover:text-yellow-500">Copyright Claims</a>
 					</div>
 				</div>
 
