--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,7 @@
 				<div id="hero-image">
 					<div class="group relative">
 						<!-- bg gradient -->
-						<div class="rounded-lg absolute -inset-0.5 bg-gradient-to-r from-red-500 to-yellow-500 blur opacity-30 dark:opacity-40 group-hover:opacity-50 dark:group-hover:opacity-70 transform md:group-hover:scale-105 transition ease-out duration-1000 group-hover:duration-700"></div>
+						<div class="rounded-lg absolute -inset-0.5 bg-gradient-to-b from-red-500 to-yellow-500 blur opacity-30 dark:opacity-40 md:group-hover:opacity-50 md:dark:group-hover:opacity-70 transform md:group-hover:scale-105 transition ease-out duration-1000 group-hover:duration-700"></div>
 
 						<img class="dark:hidden max-w-xs md:max-w-[27rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
 
@@ -225,7 +225,7 @@
 		</main>
 
 		<!-- splide js -->
-		<div class="flex justify-center">
+		<div class="flex justify-center mt-3 md:mt-0">
 			<div class="splide">
 				<!-- content -->
 				<div class="splide__track md:mx-14">
