credits page initialised

--- a/public/index.html
+++ b/public/index.html
@@ -132,6 +132,7 @@
 					<a href="" class="block text-gray-600 dark:text-gray-300">Download</a>
 					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
 					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
+					<a href="/credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Contact Us</a>
 
 					<!-- mobile language button -->
