--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -128,6 +128,7 @@
 					<a href="" class="block text-gray-600 dark:text-gray-300">Download</a>
 					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
 					<a href="/faq/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">FAQ</a>
+                    <a href="/credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Contact Us</a>
 
 					<!-- mobile language button -->
