--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
 						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
 							<!-- M1 -->
 							<div class="flex items-center h-10">
-								<a class="py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 transition duration-400 rounded-md cursor-pointer border-b-2 border-yellow-600 hover:border-b-4 active:border-none dark:border-[#410e05] dark:active:border-none" href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip"> Download for M1 Mac </a>
+								<a class="py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 rounded-md cursor-pointer border-b-2 border-yellow-600 md:hover:border-b-4 md:hover:translate-y-[-0.10rem] active:border-none dark:border-[#410e05] dark:active:border-none transition duration-200" href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip"> Download for M1 Mac </a>
 							</div>
 
 							<!-- intel -->
@@ -287,7 +287,7 @@
 				<!-- arrows -->
 				<div class="group splide__arrows">
 					<button class="splide__arrow splide__arrow--prev">
-						<div class="bg-gray-500 dark:bg-yellow-500 h-8 w-9 flex items-center justify-center shadow-lg md:shadow-none md:bg-transparent md:dark:bg-transparent rounded-full md:rounded-none dark:text-gray-600 text-gray-500 md:dark:group-hover:text-gray-300 md:group-hover:text-gray-900 transition duration-300">
+						<div class="bg-yellow-500 h-8 w-9 flex items-center justify-center shadow-lg md:shadow-none md:bg-transparent rounded-full md:rounded-none dark:text-gray-600 text-gray-500 md:dark:group-hover:text-gray-300 md:group-hover:text-gray-900 transition duration-300">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-20 w-20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
 							</svg>
