fixed download button wonkiness

--- a/public/index.html
+++ b/public/index.html
@@ -182,8 +182,8 @@
 						<!-- Download buttons -->
 						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
 							<!-- M1 -->
-							<div class="flex items-center h-10">
-								<a class="py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 rounded-md cursor-pointer border-b-2 border-yellow-600 md:hover:border-b-4 md:hover:translate-y-[-0.10rem] active:border-none dark:border-[#410e05] dark:active:border-none transition duration-200" href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip"> Download for M1 Mac </a>
+							<div class="flex items-center md:h-10 md:w-52">
+								<a class="py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 rounded-md cursor-pointer border-b-2 border-yellow-600 md:hover:border-b-4 md:hover:translate-y-[-0.15rem] active:border-none dark:border-[#410e05] dark:active:border-none transition duration-200 ease-linear" href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip"> Download for M1 Mac </a>
 							</div>
 
 							<!-- intel -->
@@ -199,7 +199,7 @@
 					</div>
 
 					<!-- build text -->
-					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 dark:border-[#3d3d3d] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
+					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.7rem] cursor-default border-2 dark:border-[#3d3d3d] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
 						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#636363] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
 							<h2 class="font-medium text-lg pb-4">Latest Update Info (0.7.0)</h2>
 
