--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -45,9 +45,11 @@
 				<!-- secondary nav -->
 				<div class="hidden xl:flex items-center space-x-5">
 					<!-- donate button -->
-					<button class="donate-nav-button border border-gold dark:border-[#c7a246] rounded-md px-3 py-1 hover:border-gold-light dark:hover:border-gold-light transition-colors duration-200 group">
-						<span class="text-[1.05rem] text-gold dark:text-[#c7a246] group-hover:text-gold-light dark:group-hover:text-gold-light transition-colors duration-200"> Donate </span>
-					</button>
+					<div class="relative">
+						<button class="group donate-nav-button border-b-2 border-yellow-500 hover:border-b-4 bg-yellow-400 dark:bg-[#791c0c] dark:border-[#410e05] active:border-none rounded-md px-3 py-1 transition duration-100 ease-linear md:hover:translate-y-[-0.15rem]">
+							<span class="text-[1.05rem] text-white transition-colors duration-200"> Donate </span>
+						</button>
+					</div>
 
 					<!-- language button and menu-->
 					<ul>
