--- a/public/legal-notice/index.html
+++ b/public/legal-notice/index.html
@@ -45,9 +45,11 @@
 				<!-- secondary nav -->
 				<div class="hidden xl:flex items-center space-x-5">
 					<!-- donate button -->
-					<button class="donate-nav-button border border-gold dark:border-[#c7a246] rounded-md px-3 py-1 hover:border-gold-light dark:hover:border-gold-light transition-colors duration-200 group">
-						<span class="text-[1.05rem] text-gold dark:text-[#c7a246] group-hover:text-gold-light dark:group-hover:text-gold-light transition-colors duration-200"> Donate </span>
-					</button>
+					<div class="relative">
+						<button class="group donate-nav-button border-b-2 border-yellow-500 hover:border-b-4 bg-yellow-400 dark:bg-[#791c0c] dark:border-[#410e05] active:border-none rounded-md px-3 py-1 transition duration-100 ease-linear md:hover:translate-y-[-0.15rem]">
+							<span class="text-[1.05rem] text-white transition-colors duration-200"> Donate </span>
+						</button>
+					</div>
 
 					<!-- language button and menu-->
 					<ul>
@@ -179,11 +181,12 @@
 					<h2 class="font-medium text-2xl">Copyright Notice</h2>
 					<div class="pl-5 pt-2">
 						<ul class="list-outside list-disc space-y-3">
-							<li>All contents, software, programs, code, technologies and user interfaces contained on this website are protected by the copyright laws. The copyright belongs to [Profispieler] [云玩家] and is subject to the Copyright Law of the People's Republic of China, copyright laws of other countries and relevant copyright conventions.</li>
+							<li>All contents, software, programs, code, technologies and user interfaces contained on this website are protected by the copyright laws. The copyright belongs to Alexandr Forofeev and is subject to relevant copyright conventions. Exclusive publishing by [Profispieler] [云玩家].</li>
 							<li>[Profispieler] [云玩家] reserves the right to pursue legal responsibilities if any use of the aforesaid copyright is beyond the scope of reasonable use and without its written permission.</li>
 						</ul>
 					</div>
 				</section>
+
 				<section class="space-y-2">
 					<h2 class="font-medium text-2xl">Trademark Statement</h2>
 					<div class="pl-5 pt-2">
