--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -18,6 +18,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
 		<!-- Montserrat font-->
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet" />
+		<!-- Neon font -->
+		<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 	</head>
 
 	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-[#171717] font-montserrat transition duration-200 ease-in-out">
@@ -649,14 +651,20 @@
 			<!-- above line -->
 			<section class="flex md:items-end justify-between max-w-screen mx-auto pt-8 pl-[6%] md:pl-[5.1%] pr-16 md:pr-[5%] flex-col-reverse md:flex-row">
 				<!-- text -->
-				<div class="pt-6 md:pt-0 flex flex-col space-y-3">
+				<div class="pt-6 md:pt-0 flex flex-col space-y-1">
 					<!-- logo -->
-					<h1 class="font-medium text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">A PlayCover Team Product</h1>
+					<h1 class="font-semibold text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">A PlayCover Team Product</h1>
 
-					<!-- legal notice and copyright claim -->
-					<div class="md:divide-x divide-gray-300 dark:divide-gray-600 flex items-center">
-						<a href="/legal-notice/" class="pr-3 hover:text-yellow-500 underline text-left inline">Legal Notice</a>
-						<a href="mailto:ke@playcover.app" class="pl-3 underline hover:text-yellow-500">Copyright Claims</a>
+					<!-- alex credits -->
+					<div class="relative">
+						<!-- placeholder -->
+						<p class="text-lg text-transparent transition duration-200 ease-in-out">Presented by <span class="font-neon font-medium">Alexandr Forofeev</span></p>
+
+						<!-- text -->
+						<p class="text-lg absolute inset-0 z-30 transition duration-200 ease-in-out">Presented by <span class="text-pink-600 dark:text-gray-300 transition duration-200 ease-in-out font-neon font-medium">Alexandr Forofeev</span></p>
+
+						<!-- bg blur -->
+						<p class="text-lg text-transparent bg-gradient-to-r absolute inset-0 blur-sm dark:text-transparent transition duration-200 ease-in-out">Presented by <span class="text-pink-100 dark:text-red-600 transition duration-200 ease-in-out font-neon font-medium">Alexandr Forofeev</span></p>
 					</div>
 				</div>
 
@@ -692,7 +700,13 @@
 			</section>
 
 			<!-- below line -->
-			<section class="flex flex-col md:flex-row md:justify-center pl-6 md:pl-0 pb-5">
+			<section class="flex flex-col md:flex-row md:justify-between pl-6 md:px-[4.40rem] pb-5 md:items-center space-y-2">
+				<!-- legal notice and copyright claim -->
+				<div class="md:divide-x divide-gray-300 dark:divide-gray-600 flex items-center">
+					<a href="/legal-notice/" class="pr-3 hover:text-yellow-500 underline text-left inline">Legal Notice</a>
+					<a href="mailto:ke@playcover.app" class="pl-3 underline hover:text-yellow-500">Copyright Claims</a>
+				</div>
+
 				<p class="inline">2021 ProfiSpieler © (BeiJing) Culture Development. Co. Ltd. All rights reserved.</p>
 			</section>
 		</footer>
