--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -168,22 +168,159 @@
 		<!-- content -->
 		<main class="pb-16">
 			<!-- heading -->
-			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Credits</span>
-				<span class="lg:hidden flex flex-col items-center text-4xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-3">
+			<header class="pt-32 xl:pt-36 pb-2 flex justify-center text-gray-700 dark:text-yellow-500 transition duration-200">
+				<span class="hidden lg:flex font-semibold lg:text-5xl">Credits</span>
+				<span class="lg:hidden flex flex-col items-center text-4xl font-semibold space-y-3">
 					<p>Credits</p>
 				</span>
 			</header>
 
 			<section class="text-gray-700 dark:text-gray-300 flex justify-center pt-14">
-				<div class="shadow-md w-[70%] h-52 rounded-lg bg-gradient-to-t dark:bg-[#222222]">
-					<p class="ml-10 mt-4 font-semibold text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">A Team PlayCover Product</p>
+				<div class="shadow-md w-[85%] md:w-[60%] rounded-lg bg-gradient-to-tl from-green-200 dark:from-red-800 to-yellow-100 dark:to-purple-900 bg-gray-200 dark:bg-[#222222] transition duration-200 ease-in-out">
+					<div class="p-4 pt-6 md:p-10 space-y-4 flex flex-col">
+						<!-- creator -->
+						<div class="space-x-1 flex items-start md:items-center">
+							<!-- icon -->
+							<div class="flex items-center space-x-1">
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+								</svg>
+								<!-- title -->
+								<p class="font-semibold">Creator: &nbsp;</p>
+							</div>
+							<div class="flex items-center">
+								<!-- person -->
+								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-center">
+									<p class="">Alexandr Forofeev -&nbsp;</p>
+									<a class="" href="mailto:alex@playcover.app">alex@playcover.app</a>
+								</div>
+							</div>
+						</div>
 
-					<div class="flex">
-						<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20" fill="currentColor">
-							<path fill-rule="evenodd" d="M2 5a2 2 0 012-2h12a2 2 0 012 2v10a2 2 0 01-2 2H4a2 2 0 01-2-2V5zm3.293 1.293a1 1 0 011.414 0l3 3a1 1 0 010 1.414l-3 3a1 1 0 01-1.414-1.414L7.586 10 5.293 7.707a1 1 0 010-1.414zM11 12a1 1 0 100 2h3a1 1 0 100-2h-3z" clip-rule="evenodd" />
-						</svg>
-						<p>Creator: Alex (your email @playcover.app)</p>
+						<!-- backend -->
+						<div class="space-x-1 flex items-start md:items-center">
+							<!-- icon -->
+							<div class="flex items-start md:items-center space-x-1">
+								<svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+								</svg>
+								<!-- title -->
+								<p class="pt-[0.17rem] md:pt-0 font-semibold">Backend: &nbsp;</p>
+							</div>
+							<div class="flex items-center">
+								<!-- person -->
+								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
+									<p class="">Hades -&nbsp;</p>
+									<a class="" href="mailto:hades@playcover.app">hades@playcover.app</a>
+								</div>
+							</div>
+						</div>
+
+						<!-- API & Server: -->
+						<div class="space-x-1 flex items-start md:items-center">
+							<!-- icon -->
+							<div class="flex items-start md:items-center space-x-1">
+								<svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" viewBox="0 0 20 20" fill="currentColor">
+									<path fill-rule="evenodd" d="M9.504 1.132a1 1 0 01.992 0l1.75 1a1 1 0 11-.992 1.736L10 3.152l-1.254.716a1 1 0 11-.992-1.736l1.75-1zM5.618 4.504a1 1 0 01-.372 1.364L5.016 6l.23.132a1 1 0 11-.992 1.736L4 7.723V8a1 1 0 01-2 0V6a.996.996 0 01.52-.878l1.734-.99a1 1 0 011.364.372zm8.764 0a1 1 0 011.364-.372l1.733.99A1.002 1.002 0 0118 6v2a1 1 0 11-2 0v-.277l-.254.145a1 1 0 11-.992-1.736l.23-.132-.23-.132a1 1 0 01-.372-1.364zm-7 4a1 1 0 011.364-.372L10 8.848l1.254-.716a1 1 0 11.992 1.736L11 10.58V12a1 1 0 11-2 0v-1.42l-1.246-.712a1 1 0 01-.372-1.364zM3 11a1 1 0 011 1v1.42l1.246.712a1 1 0 11-.992 1.736l-1.75-1A1 1 0 012 14v-2a1 1 0 011-1zm14 0a1 1 0 011 1v2a1 1 0 01-.504.868l-1.75 1a1 1 0 11-.992-1.736L16 13.42V12a1 1 0 011-1zm-9.618 5.504a1 1 0 011.364-.372l.254.145V16a1 1 0 112 0v.277l.254-.145a1 1 0 11.992 1.736l-1.735.992a.995.995 0 01-1.022 0l-1.735-.992a1 1 0 01-.372-1.364z" clip-rule="evenodd" />
+								</svg>
+								<!-- title -->
+								<p class="pt-[0.10rem] md:pt-0 font-semibold">API & Server: &nbsp;</p>
+							</div>
+							<div class="md:pl-0 flex items-center">
+								<!-- person -->
+								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-center">
+									<p class="">KeShui, ProfiSpieler</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- website -->
+						<div class="space-x-1 flex items-start md:items-center">
+							<!-- icon -->
+							<div class="flex items-start md:items-center space-x-1">
+								<svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+								</svg>
+
+								<!-- title -->
+								<p class="font-semibold">Website: &nbsp;</p>
+							</div>
+							<div class="flex items-center">
+								<!-- person -->
+								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
+									<p class="">AJ -&nbsp;</p>
+									<a class="" href="mailto:AJ@playcover.app">aj@playcover.app</a>
+								</div>
+							</div>
+						</div>
+
+						<!-- product manager -->
+						<div class="space-x-1 flex items-start md:items-center">
+							<!-- icon -->
+							<div class="flex items-start md:items-center space-x-1">
+								<svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 13v-1m4 1v-3m4 3V8M8 21l4-4 4 4M3 4h18M4 4h16v12a1 1 0 01-1 1H5a1 1 0 01-1-1V4z" />
+								</svg>
+
+								<!-- title -->
+								<p class="font-semibold">Product Manager: &nbsp;</p>
+							</div>
+							<div class="flex items-center">
+								<!-- person -->
+								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
+									<p class="">ProfiSpieler -&nbsp;</p>
+									<a class="" href="mailto:ke@playcover.app">ke@playcover.app</a>
+								</div>
+							</div>
+						</div>
+
+						<!-- icon -->
+						<div class="space-x-1 flex items-center">
+							<div class="h-7 w-7">
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 4a2 2 0 114 0v1a1 1 0 001 1h3a1 1 0 011 1v3a1 1 0 01-1 1h-1a2 2 0 100 4h1a1 1 0 011 1v3a1 1 0 01-1 1h-3a1 1 0 01-1-1v-1a2 2 0 10-4 0v1a1 1 0 01-1 1H7a1 1 0 01-1-1v-3a1 1 0 00-1-1H4a2 2 0 110-4h1a1 1 0 001-1V7a1 1 0 011-1h3a1 1 0 001-1V4z" />
+								</svg>
+							</div>
+							<div class="flex items-center">
+								<!-- title -->
+								<p class="font-semibold">Icon: &nbsp;</p>
+
+								<!-- person -->
+								<div class="dark:divide-gray-600 flex items-center">
+									<p class="">Artemiy</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- translation -->
+						<div>
+							<div class="space-x-1 flex items-center">
+								<div class="h-7 w-7">
+									<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5h12M9 3v2m1.048 9.5A18.022 18.022 0 016.412 9m6.088 9h7M11 21l5-10 5 10M12.751 5C11.783 10.77 8.07 15.61 3 18.129" />
+									</svg>
+								</div>
+								<div class="flex items-center">
+									<!-- title -->
+									<p class="font-semibold">Translation Service: &nbsp;</p>
+								</div>
+							</div>
+							<div class="pt-1 pl-9">
+								<p>Chinese: catalpam</p>
+								<p>Spanish: Hades</p>
+								<p>Japanese: 小霖</p>
+								<p>Korean: Leo</p>
+								<p>Indonesian: Haru and mbah sukocok</p>
+								<p>Russian: Annymone</p>
+							</div>
+						</div>
+
+						<!-- special thanks -->
+						<div class="pt-4">
+							<p class="font-semibold text-lg pb-2">Special thanks to...</p>
+							<p>LingFei.Shengtian for ARM Support and Services</p>
+						</div>
 					</div>
 				</div>
 			</section>
