added game in carousel on homepage

--- a/public/index.html
+++ b/public/index.html
@@ -262,6 +262,14 @@
 							</div>
 						</li>
 
+						<!-- among us  -->
+						<li class="splide__slide px-2 md:px-2" style="width: 10px">
+							<div class="group relative">
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/Among us gameplay.jpeg" alt="among us gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/Among us logo.jpeg" alt="among us logo image" />
+							</div>
+						</li>
+
 						<!-- wild rift -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
