added link in download button on nav

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
 					<a href="/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Home </a>
-					<a href="/download/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
+					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
 					<a href="/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
 					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
 					<a href="/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Credits </a>
@@ -133,7 +133,7 @@
 			<div class="mobile-menu hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="../" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
-					<a href="" class="block text-gray-600 dark:text-gray-300">Download</a>
+					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Download</a>
 					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
 					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
 					<a href="/credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
@@ -254,19 +254,19 @@
 							</div>
 						</li>
 
-						<!-- guardian tales  -->
-						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<div class="group relative">
-								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/guardian-tales-gameplay.png" alt="Guardian Tales gameplay image" />
-								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/Guardian-Tales-Cover.jpeg" alt="Guardian Tales logo image" />
-							</div>
-						</li>
-
 						<!-- among us  -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
 								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/Among us gameplay.jpeg" alt="among us gameplay image" />
 								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/Among us logo.jpeg" alt="among us logo image" />
+							</div>
+						</li>
+
+						<!-- guardian tales  -->
+						<li class="splide__slide px-2 md:px-2" style="width: 10px">
+							<div class="group relative">
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/guardian-tales-gameplay.png" alt="Guardian Tales gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/Guardian-Tales-Cover.jpeg" alt="Guardian Tales logo image" />
 							</div>
 						</li>
 
