--- a/public/index.html
+++ b/public/index.html
@@ -443,7 +443,7 @@
 			</section>
 
 			<!-- below line -->
-			<section class="flex flex-col md:flex-row md:justify-between pl-6 md:px-[4.40rem] pb-5 md:items-center space-y-2">
+			<section class="flex flex-col md:flex-row md:justify-between pl-6 md:px-[4.95vw] pb-5 md:items-center space-y-2">
 				<!-- legal notice and copyright claim -->
 				<div class="md:divide-x divide-gray-300 dark:divide-gray-600 flex items-center">
 					<a href="/legal-notice/" class="pr-3 hover:text-yellow-500 underline text-left inline">Legal Notice</a>
