--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="this is my site description" />
 		<meta name="keywords" content="8-12 words max" />
 		<title>Changelog</title>
-		<link href="css/styles.css" rel="stylesheet" />
+		<link href="../css/styles.css" rel="stylesheet" />
 		<link rel="shortcut icon" type="image/jpg" href="assets/favicon.png" />
 		<script src="js/local-storage-track.js"></script>
 
