--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -9,7 +9,7 @@
 		<title>Changelog</title>
 		<link href="../css/styles.css" rel="stylesheet" />
 		<link rel="shortcut icon" type="image/jpg" href="assets/favicon.png" />
-		<script src="js/local-storage-track.js"></script>
+		<script src="../js/local-storage-track.js"></script>
 
 		<!-- fonts import -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -38,9 +38,9 @@
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
 					<a href="/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Home </a>
 					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
-					<a href="/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
-					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
-					<a href="/credits/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Credits </a>
+					<a href="../changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
+					<a href="../faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
+					<a href="../credits/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Credits </a>
 					<a href="" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Contact Us </a>
 				</div>
 
@@ -131,8 +131,8 @@
 					<a href="../" class="block text-gray-600 dark:text-gray-300">Home</a>
 					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Download</a>
 					<a href="./" class="block text-gray-600 dark:text-gray-300">Changelog</a>
-					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/credits/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Credits</a>
+					<a href="../faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
+					<a href="../credits/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Credits</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Contact Us</a>
 
 					<!-- mobile language button -->
@@ -449,7 +449,7 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="md:divide-x divide-gray-300 dark:divide-gray-600 flex items-center">
-						<a href="/legal-notice/" class="pr-3 hover:text-yellow-500 underline text-left inline">Legal Notice</a>
+						<a href="../legal-notice/" class="pr-3 hover:text-yellow-500 underline text-left inline">Legal Notice</a>
 						<a href="mailto:ke@playcover.app" class="pl-3 underline hover:text-yellow-500">Copyright Claims</a>
 					</div>
 
@@ -464,12 +464,12 @@
 		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#1a1a1a] animate-bounce animate-pulse"></div>
 
 		<!-- js -->
-		<script src="js/language-button.js"></script>
-		<script src="js/mobile-buttons.js"></script>
-		<script src="js/dark-mode.js"></script>
-		<script src="js/donate-popup.js"></script>
-		<script src="js/auto-closer.js"></script>
-		<script src="js/animator.js"></script>
-		<script src="js/changelog.js"></script>
+		<script src="../js/language-button.js"></script>
+		<script src="../js/mobile-buttons.js"></script>
+		<script src="../js/dark-mode.js"></script>
+		<script src="../js/donate-popup.js"></script>
+		<script src="../js/auto-closer.js"></script>
+		<script src="../js/animator.js"></script>
+		<script src="../js/changelog.js"></script>
 	</body>
 </html>
