--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
 		<meta name="description" content="this is my site description" />
 		<meta name="keywords" content="8-12 words max" />
 		<title>PlayCover</title>
-		<link href="css/styles.css" rel="stylesheet" />
+		<link href="../css/styles.css" rel="stylesheet" />
 		<link rel="shortcut icon" type="image/jpg" href="assets/favicon.png" />
-		<script src="js/local-storage-track.js"></script>
+		<script src="../js/local-storage-track.js"></script>
 
 		<!-- splide JS -->
-		<link href="css/splide.min.css" rel="stylesheet" />
-		<link href="css/splide-core.min.css" rel="stylesheet" />
+		<link href="../css/splide.min.css" rel="stylesheet" />
+		<link href="../css/splide-core.min.css" rel="stylesheet" />
 
 		<!-- fonts import -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -40,11 +40,11 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Home </a>
+					<a href="./" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Home </a>
 					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
-					<a href="/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
-					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
-					<a href="/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Credits </a>
+					<a href="../changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
+					<a href="../faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
+					<a href="../credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Credits </a>
 					<a href="" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Contact Us </a>
 				</div>
 
@@ -132,11 +132,11 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="../" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
+					<a href="./" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
 					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Download</a>
-					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
-					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
+					<a href="../changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
+					<a href="../faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
+					<a href="../credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Contact Us</a>
 
 					<!-- mobile language button -->
@@ -447,7 +447,7 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="md:divide-x divide-gray-300 dark:divide-gray-600 flex items-center">
-						<a href="/legal-notice/" class="pr-3 hover:text-yellow-500 underline text-left inline">Legal Notice</a>
+						<a href="../legal-notice/" class="pr-3 hover:text-yellow-500 underline text-left inline">Legal Notice</a>
 						<a href="mailto:ke@playcover.app" class="pl-3 underline hover:text-yellow-500">Copyright Claims</a>
 					</div>
 
@@ -462,15 +462,15 @@
 		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#1a1a1a] animate-bounce animate-pulse"></div>
 
 		<!-- js -->
-		<script src="js/language-button.js"></script>
-		<script src="js/mobile-buttons.js"></script>
-		<script src="js/dark-mode.js"></script>
-		<script src="js/donate-popup.js"></script>
-		<script src="js/auto-closer.js"></script>
-		<script src="js/animator.js"></script>
+		<script src="../js/language-button.js"></script>
+		<script src="../js/mobile-buttons.js"></script>
+		<script src="../js/dark-mode.js"></script>
+		<script src="../js/donate-popup.js"></script>
+		<script src="../js/auto-closer.js"></script>
+		<script src="../js/animator.js"></script>
 
 		<!-- splide js -->
-		<script src="js/splide.min.js"></script>
+		<script src="../js/splide.min.js"></script>
 		<script>
 			const config = {
 				type: "loop",
