--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -307,6 +307,7 @@
 								</div>
 							</div>
 							<div class="pt-1 pl-9">
+								<p>German: AXDaily</p>
 								<p>Chinese: catalpam</p>
 								<p>Spanish: Hades</p>
 								<p>Japanese: 小霖</p>
