modified credits page

--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -318,10 +318,32 @@
 						</div>
 
 						<!-- special thanks -->
+						<div>
+							<div class="space-x-1 flex items-center">
+								<div class="h-7 w-7">
+									<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+									</svg>
+								</div>
+								<div class="flex items-center">
+									<!-- title -->
+									<p class="font-semibold">Special thanks to...</p>
+								</div>
+							</div>
+							<div class="pt-1 pl-9">
+								<p>All the supporters</p>
+								<p>Slopie and all the mods for FAQ</p>
+								<p>LingFei.Shengtian for ARM Support and Services</p>
+							</div>
+						</div>
+
+						<!-- special thanks
 						<div class="pt-4">
 							<p class="font-semibold text-lg pb-2">Special thanks to...</p>
+							<p>All the supporters</p>
+							<p>Slopie and all the mods for FAQ</p>
 							<p>LingFei.Shengtian for ARM Support and Services</p>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</section>
